--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,9 @@
 }
 
 img {
-  height: 30vh;
+  width: 80%;
+  border: solid 5px pink;
+  background-color: lightgreen;
 }
 
 .infoContainer {
@@ -17,4 +19,6 @@ img {
   font-family: Arial, Helvetica, sans-serif;
   text-transform: capitalize;
   border: solid 10px sandybrown;
+  background-color: skyblue;
+  object-fit: cover;
 }
